Atualizando estilização e animações

--- a/src/componentes/HqCard/style/hqcard.css
+++ b/src/componentes/HqCard/style/hqcard.css
@@ -1,26 +1,17 @@
-@keyframes hqCardBorderAnimation {
-    0% {
-        border-color: #EAD100;
-    }
-    50%{
-        border-color: white;
-    }
-    100% {
-        border-color: #EAD100;
-    }
-}
-
-.hqcard{
-}
-
 .hqimage{
-    width: 200px;
-    height: 250px;
+    width: 60%;
+    height: 75%;
     object-fit: fill;
     filter: drop-shadow(2px 2px 5px black);
     transition: transform 0.2s 1ms ease-in-out;
+    justify-self: center;
+    align-self: center;
 }
 
-.hqimage:hover{
-    transform: scale(1.1)
+.hqcard:hover .hqimage{
+    transform: scale(1.1);
+}
+
+.hqcard:hover .hqtitle{
+    color: rgb(230, 36, 41)
 }
